# ros2_ws

bag_files/rosbag2_2024_08_08-18_20_33/: metadata.yaml  rosbag2_2024_08_08-18_20_33_0.db3
install/cpp_pubsub/lib/cpp_pubsub/: topics_practice  topics_practice_b
install/cpp_srvcli/lib/cpp_srvcli/: service_practice  service_practice_b
install/more_interfaces/share/more_interfaces/: package.sh
src/cpp_launch_example/: CMakeLists.txt  ComandoEjecutableIncisoA.txt
src/cpp_launch_example/launch/: turtlesim_mimic_b_launch.py  turtlesim_mimic_launch.py
src/cpp_launch_example/src/: spiral_publisher.cpp
src/cpp_pubsub/: CMakeLists.txt
src/cpp_pubsub/src/: topics_practice.cpp  topics_practice_b.cpp
src/cpp_srvcli/: CMakeLists.txt
src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  service_practice.cpp  service_practice_b.cpp
src/more_interfaces/: CMakeLists.txt
src/more_interfaces/src/: publish_address_book.cpp
src/py_launch_example/: setup.py
src/py_launch_example/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/py_launch_example/py_launch_example/: spiral_publisher.py
src/py_pubsub/: setup.py
src/py_pubsub/py_pubsub/: topics_practice.py
src/py_srvcli/: setup.py
src/py_srvcli/py_srvcli/: service_practice.py
src/testing_interfaces_cpp/: CMakeLists.txt  package.xml
src/testing_interfaces_cpp/src/: add_client_node.cpp  add_service_node.cpp  sphere_listener.cpp  sphere_publisher.cpp
src/testing_interfaces_python/: setup.cfg  setup.py
src/testing_interfaces_python/testing_interfaces_python/: add_client_node.py
src/tutorial_interfaces/: CMakeLists.txt
(+35 files in other folders)
